<resources>
    <string name="app_name">Lab2Gr02</string>
    <string name="str_usuario">Usuario</string>
    <string name="str_password">Password</string>
    <string name="str_confirmaPassword">Confirma tu contraseña</string>
    <string name="str_registrarse">Registrarse</string>
    <string name="str_informacionRegistro">Ingresa los siguientes campos por favor</string>
    <string name="str_email">E-mail</string>
    <string name="str_confirmarRegistro">Confirmar</string>
    <string name="str_ingresar">Ingresar</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
