<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.john.laboratorio2.Registro">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:text="@string/str_informacionRegistro"
        android:id="@+id/tview_explicacionRegistro"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_weight="1"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:text="@string/str_usuario"
        android:id="@+id/tview_usuario"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_weight="1"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/etext_usuario"
        android:layout_weight="1"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:textSize="20sp"
        android:text="@string/str_password"
        android:id="@+id/tview_password"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:layout_marginTop="40dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/etext_password"
        android:layout_weight="1"
        android:inputType="textPassword"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:textSize="20sp"
        android:text="@string/str_confirmaPassword"
        android:id="@+id/tview_confirmacionPassword"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/etext_confirmacionPassword"
        android:layout_weight="1"
        android:inputType="textPassword"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:textSize="20sp"
        android:text="@string/str_email"
        android:id="@+id/tview_email"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/etext_email"
        android:layout_weight="1"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />



    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:text="@string/str_confirmarRegistro"
        android:id="@+id/botonRegistro"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:textSize="20sp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

</LinearLayout>
